[package]
name = "rg" # "Rust Graphics"
version = "0.1.0"
authors = ["Victor Albertsson <victor.albertsson@live.se>"]
edition = "2018"

[dependencies]
log = "0.4"
winit = "0.22"
#imgui = "0.3" # or conrod
# imgui-gfx tutorial: https://github.com/WimbledonLabs/imgui_gfx_example
#gl = "0.10"

[dev-dependencies]
simple_logger = "*"
